--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: action/chekout@v2
       - uses: action/setup-node@v1
@@ -17,8 +17,8 @@ jobs:
         run: |
           npm ci
           npm run build
-      -name: Deploy to gh-pages
-       uses: peaceiris/action-gh-pages@v2
+      - name: Deploy to gh-pages
+        uses: peaceiris/action-gh-pages@v2
        with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
