--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,24 @@
 name: deploy
 
 on:
- push:
-  branches:
+  push:
+    branches:
       - action
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/chekout@v2
-      - uses: action/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      - name: Build wep-app
+      - name: Build web-app
         run: |
           npm ci
           npm run build
       - name: Deploy to gh-pages
         uses: peaceiris/action-gh-pages@v2
-       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
