adding lhci config

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "proc_sel",
   "version": "0.1.0",
-  "homepage":"https://pdhenrique.github.io/lhciProj",
-  "private": true,
+  "homepage":"https://pdhenrique.github.io/lhciProj/build",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,9 +16,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts start && http-server",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test && lhci autorun",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
