--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,9 @@ jobs:
 
     - name: Run Lighthouse CI
       run: npm run lhci
+    
+    - name: Archive Lighthouse CI reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: lhci-reports
+          path: ./lhci_reports/
