updating lhci config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Run Lighthouse CI
       run: npm run lhci
     
-    - name: Archive Lighthouse CI reports
-      uses: actions/upload-artifact@v2
-      with:
-        name: lhci-reports
-        path: ./lhci_reports/
+    # - name: Archive Lighthouse CI reports
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: lhci-reports
+    #     path: ./lhci_reports/
       env:
         LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
