--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,6 @@ jobs:
       run: npm run build
 
     - name: Run Lighthouse CI
-      run: | 
-        npm run lhci
-        npx lighthouse https://pdhenrique.github.io/lhciProj/build --score=90--quiet
-     
+      run: npm run lhci
       env:
         LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
