--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "proc_sel",
   "version": "0.1.0",
-  "homepage":"https://pdhenrique.github.io/lhciProj/build",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,16 +12,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@lhci/cli": "^0.8.1"
-  },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lhci": "lhci autorun --upload.target=temporary-public-storage || echo 'LHCI failed'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
